--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,7 @@
 services:
   immich-kiosk:
-    image: damongolding/immich-kiosk-webhook-server:latest
+    image: ghcr.io/damongolding/immich-kiosk-webhook-server:latest
     container_name: immich-kiosk-webhook-server
-    tty: true
     env_file:
       - .env
     environment:
